Fixed some small mistakes in the search filter, worked on making Home.jsx similar to PlasmicHome.jsx in terms of code, currently learn more button not aligned properly for Home.jsx

--- a/frontend/components/plasmic/canvas_app_explorer/PlasmicHome.css
+++ b/frontend/components/plasmic/canvas_app_explorer/PlasmicHome.css
@@ -1,3 +1,6 @@
+p {
+    display: inline;
+}
 .Home__root__rfWi8 {
   display: flex;
   position: relative;
